--- a/py4acc_03.ipynb
+++ b/py4acc_03.ipynb
@@ -741,7 +741,7 @@
    ],
    "source": [
     "# check column types\n",
-    "income_statement.dytypes"
+    "income_statement.dtypes"
    ]
   },
   {
@@ -1092,7 +1092,7 @@
     "tickers = ['AMZN', 'AAPL', 'MSFT', 'GOOG', 'FB']\n",
     "\n",
     "# download balance sheet for first ticker\n",
-    "balance_sheets = yf_financials(ticker[0], type_='bs')\n",
+    "balance_sheets = yf_financials(tickers[0], type_='bs')\n",
     "\n",
     "# loop through remaining tickers\n",
     "for _ _ _ _ in _ _ _ _:\n",
@@ -4934,7 +4934,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
